HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuSafeTypeDiagnostic/Expected.uv
//! Expected diagnostic metadata for the GpuSafeTypeDiagnostic rejected-source specimen.

expectedDiagnostic("E-TYP-2640", "rule.20.GpuSafeType-Err")
